--- a/views/greeting.hbs
+++ b/views/greeting.hbs
@@ -1,1 +1,10 @@
 <h1>Hello {{name}}!</h1>
+<ul class="people_list">
+  {{#each pens}}
+    <li>
+      <span>{{this.name}}</span>
+      <span>{{this.length}}</span>
+      <span>{{this.color}}</span>
+    </li>
+  {{/each}}
+</ul>
